2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (are_comparands_equal): Fix code
	style nit; parenthesize formally complex expression.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_request): Adjust wording of
	warning diagnostic to better describe what the `do` request
	actually does.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_zero_width_output): Adjust
	wording of warning diagnostic to describe the escape sequence
	consistently with other messages.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_overstrike, do_bracket)
	(token::next): Convert some recent assertions to error
	diagnostics, since inputs to provoke them are not impossible.
	I found these by attempting to format GNU troff's own ELF
	executable as a document (the laziest possible fuzz testing).

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::description): Add description
	of the "empty" token type to which the global `tok` is
	initialized.  This comes up in a corner case of parser state,
	because sometimes we have to read multiple characters to decide
	what kind of token the very first one in the input stream is.
	Consider a delimited escape sequence whose wheels fall off
	because it's invalidly delimited.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_delimited_number)
	(read_delimited_name): Refactor.  Make logic more parallel.
	Make both functions check explicitly for EOF where the starting
	delimiter should be (and throw error if it's encountered).  Make
	both call `is_usable_as_delimiter()` member function of
	`start_token` object.  Parallelize wording of warning
	diagnostics in "delim" category.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>
